[12/09/2010]
- Fight/SocketManager : Correction de l'option expulser.

[09/09/2010]
- SpellEffect : Ajout du sort "Laisse spirituel" de Sylarman.

[08/09/2010]
- GameThread : Localisation des membres du groupe fonctionnel.
- SpellEffect : Correction du sort "sacrifice" par Sylarman.
- Guilde : La supression d'une guilde, retire les maisons de guildes associés.
- Fight : Correction de quelques bugs liés a la fonction annuler.
- Fight : Correction de l'affichage des épées dans le mode spectateur.

[07/09/2010]
- Personnage/SQLManager : Ajout d'un vérification, qui retire les items qui occupe une même position (Exemple : Porter deux coiffes).
- Ancestra : Ré-hausse de la limite de flood a 60 secondes.
- SpellEffect : Correction du sort Ronce apaisante (Sadi).
- GameThread : Le nom du personnage a sa création ne peux plus que comporter qu'un tiret et qu'un suite de deux même caractères.
- Fight : L'agression d'un personnage possèdant la même IP que la sienne ne fait plus gagner de point d'honneur (Configurable avec l'option ALLOW_MULE_PVP).

[06/09/2010]
- Guilde : La supression d'un membre de guilde enleve sa maison de celle-ci.

[03/09/2010]
- Personnage : Ajout du stuff du double (quelques bug surviennent).

[02/09/2010]
- Fight : Gestion de l'affichage du drop percepteur en fin de combat.
- Fight : Le double est décharger de la mémoire a la fin du combat.
- Percepteur : Supression des items non récoltés/droppés.

[01/09/2010]
- Percepteur : Ajout d'un système d'information de récolte pour les autres membre de guilde.
- Fight : Gestion de l'affichage des percepteurs lors de l'affichage des gains en PVM.
- Fight : Mise en place du système de gain de kamas et d'expérience sur les percepteurs.

[31/08/2010]
- Percepteur : Mise en place du système de récolte de kamas.
- Percepteur : Mise en place du système de récolte d'objets.
- Percepteur : Supression de celui-ci après récolte.
- BDD : Ajout du patch des potions d'oublie de métier (THX xox1505).